[gd_scene load_steps=29 format=2]

[ext_resource path="res://Font/mplus_hzk_12.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Texture/Assets-2(Scale-x2)-No-BG_07.png" type="Texture" id=2]
[ext_resource path="res://UI/ItemUI/RoleSkillItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/ItemUI/HeroItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shaders/SimpleBlur.tres" type="Material" id=5]
[ext_resource path="res://Texture/none_bg.png" type="Texture" id=6]
[ext_resource path="res://Texture/hud/atbg.png" type="Texture" id=7]
[ext_resource path="res://UI/ItemUI/RoleEquItem.tscn" type="PackedScene" id=8]
[ext_resource path="res://Texture/hud/p_s_n.png" type="Texture" id=9]
[ext_resource path="res://Texture/hud/p_s_s.png" type="Texture" id=10]
[ext_resource path="res://Font/123_max.fnt" type="BitmapFont" id=11]
[ext_resource path="res://UI/ScrollContainer.gd" type="Script" id=12]
[ext_resource path="res://UI/PartyUI.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0.439216, 0.376471, 0.313726, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0.439216, 0.376471, 0.313726, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 24
outline_size = 2
outline_color = Color( 0.439216, 0.376471, 0.313726, 1 )
extra_spacing_char = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 14
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
outline_color = Color( 0.439216, 0.376471, 0.313726, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 145, 52 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 145, 52 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 145, 52 )

[sub_resource type="DynamicFont" id=14]
outline_size = 2
outline_color = Color( 0.439216, 0.376471, 0.313726, 1 )
font_data = ExtResource( 1 )

[node name="PartyUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.615686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -238.0
margin_top = -172.0
margin_right = 238.0
margin_bottom = -40.0
scroll_vertical_enabled = false
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1690.0
margin_bottom = 120.0
alignment = 1

[node name="Node2D" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_right = 150.0

[node name="Node2D2" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 154.0
margin_right = 304.0

[node name="Node2D3" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 308.0
margin_right = 458.0

[node name="Node2D4" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 462.0
margin_right = 612.0

[node name="Node2D5" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 616.0
margin_right = 766.0

[node name="Node2D6" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 770.0
margin_right = 920.0

[node name="Node2D7" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 924.0
margin_right = 1074.0

[node name="Node2D8" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 1078.0
margin_right = 1228.0

[node name="Node2D9" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 1232.0
margin_right = 1382.0

[node name="Node2D10" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 1386.0
margin_right = 1536.0

[node name="Node2D11" parent="ScrollContainer/HSlider" instance=ExtResource( 4 )]
margin_left = 1540.0
margin_right = 1690.0

[node name="attr" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = -208.0
margin_right = 224.5
margin_bottom = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="attr"]
margin_left = 13.0
margin_top = 81.0
margin_right = 120.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )
text = "攻击"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_hp" type="Label" parent="attr"]
margin_left = 81.604
margin_top = 14.037
margin_right = 187.604
margin_bottom = 40.037
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 11 )
text = "100"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_atk" type="Label" parent="attr"]
margin_left = 130.0
margin_top = 81.0
margin_right = 197.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_mtk" type="Label" parent="attr"]
margin_left = 130.0
margin_top = 125.0
margin_right = 197.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_def" type="Label" parent="attr"]
margin_left = 130.0
margin_top = 169.0
margin_right = 197.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_speed" type="Label" parent="attr"]
margin_left = 334.0
margin_top = 81.0
margin_right = 401.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_crit" type="Label" parent="attr"]
margin_left = 334.0
margin_top = 125.0
margin_right = 401.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_mdef" type="Label" parent="attr"]
margin_left = 334.0
margin_top = 169.0
margin_right = 401.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_lv" type="Label" parent="attr"]
margin_left = 375.291
margin_top = 14.037
margin_right = 416.291
margin_bottom = 45.037
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 11 )
text = "900"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="attr"]
margin_left = 13.0
margin_top = 123.676
margin_right = 120.0
margin_bottom = 159.676
custom_fonts/font = SubResource( 1 )
text = "魔力"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="attr"]
margin_left = 13.0
margin_top = 168.045
margin_right = 120.0
margin_bottom = 204.045
custom_fonts/font = SubResource( 1 )
text = "物免"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="attr"]
margin_left = 216.411
margin_top = 80.0
margin_right = 323.41
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "速度"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="attr"]
margin_left = 216.411
margin_top = 123.676
margin_right = 323.41
margin_bottom = 159.676
custom_fonts/font = SubResource( 1 )
text = "暴击"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="attr"]
margin_left = 216.411
margin_top = 168.045
margin_right = 323.41
margin_bottom = 204.045
custom_fonts/font = SubResource( 1 )
text = "魔免"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equ_main" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = -208.0
margin_right = 224.5
margin_bottom = 32.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="equ_main"]
margin_left = 13.0
margin_top = 9.0
margin_right = 222.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "人物装备"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="equ_main"]
margin_left = 13.0
margin_top = 76.0
margin_right = 217.0
margin_bottom = 208.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="equ_main/GridContainer" instance=ExtResource( 8 )]
margin_right = 60.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
type = "武器"

[node name="Control2" parent="equ_main/GridContainer" instance=ExtResource( 8 )]
margin_left = 72.0
margin_right = 132.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
type = "头盔"

[node name="Control3" parent="equ_main/GridContainer" instance=ExtResource( 8 )]
margin_left = 144.0
margin_right = 204.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
type = "衣服"

[node name="Control4" parent="equ_main/GridContainer" instance=ExtResource( 8 )]
margin_left = 216.0
margin_right = 276.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
type = "裤子"

[node name="Control5" parent="equ_main/GridContainer" instance=ExtResource( 8 )]
margin_top = 72.0
margin_right = 60.0
margin_bottom = 132.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
type = "护手"

[node name="Control6" parent="equ_main/GridContainer" instance=ExtResource( 8 )]
margin_left = 72.0
margin_top = 72.0
margin_right = 132.0
margin_bottom = 132.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
type = "护腿"

[node name="Control7" parent="equ_main/GridContainer" instance=ExtResource( 8 )]
margin_left = 144.0
margin_top = 72.0
margin_right = 204.0
margin_bottom = 132.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
type = "戒指"

[node name="Control8" parent="equ_main/GridContainer" instance=ExtResource( 8 )]
margin_left = 216.0
margin_top = 72.0
margin_right = 276.0
margin_bottom = 132.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
type = "饰品"

[node name="skill_main" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = -208.0
margin_right = 224.5
margin_bottom = 32.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="skill_main"]
margin_left = 13.0
margin_top = 9.0
margin_right = 222.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "已装备技能"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="skill_main"]
margin_left = 13.0
margin_top = 76.0
margin_right = 433.0
margin_bottom = 210.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="skill_main/GridContainer" instance=ExtResource( 3 )]
margin_right = 60.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Control2" parent="skill_main/GridContainer" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 132.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Control3" parent="skill_main/GridContainer" instance=ExtResource( 3 )]
margin_left = 144.0
margin_right = 204.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Control4" parent="skill_main/GridContainer" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 276.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Control5" parent="skill_main/GridContainer" instance=ExtResource( 3 )]
margin_left = 288.0
margin_right = 348.0
margin_bottom = 60.0
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="status" type="TextureRect" parent="."]
margin_left = 607.974
margin_top = 358.753
margin_right = 751.974
margin_bottom = 422.753
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="status"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -31.0
margin_right = 54.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "基础属性"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skill" type="TextureRect" parent="."]
margin_left = 417.486
margin_top = 382.564
margin_right = 561.486
margin_bottom = 446.564
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="skill"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -31.0
margin_right = 54.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "技能"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equ" type="TextureRect" parent="."]
margin_left = 817.486
margin_top = 382.564
margin_right = 962.486
margin_bottom = 446.564
rect_pivot_offset = Vector2( -80.5675, -37.8823 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="equ"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -31.0
margin_right = 54.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "装备"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill_bg" type="NinePatchRect" parent="."]
visible = false
margin_left = 61.0
margin_top = 103.0
margin_right = 403.0
margin_bottom = 582.0
rect_pivot_offset = Vector2( -99.2693, 132.973 )
mouse_filter = 0
texture = ExtResource( 7 )
patch_margin_top = 96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Skill_bg"]
margin_left = 26.0
margin_top = 18.0
margin_right = 115.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 7 )
text = "技能栏"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Skill_bg"]
margin_left = 124.071
margin_top = 32.0
margin_right = 323.071
margin_bottom = 47.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.439216, 0.376471, 0.313726, 1 )
text = "长按拖动到右侧替换技能"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Skill_bg"]
margin_left = 26.0
margin_top = 74.0
margin_right = 304.0
margin_bottom = 448.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Skill_bg/ScrollContainer"]
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 4

[node name="Equ_bg" type="NinePatchRect" parent="."]
visible = false
margin_left = 61.0
margin_top = 103.0
margin_right = 403.0
margin_bottom = 582.0
rect_pivot_offset = Vector2( -99.2693, 132.973 )
mouse_filter = 0
texture = ExtResource( 7 )
patch_margin_top = 96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Equ_bg"]
margin_left = 26.0
margin_top = 10.0
margin_right = 121.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 7 )
text = "装备库"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Equ_bg"]
margin_left = 124.071
margin_top = 32.0
margin_right = 323.071
margin_bottom = 47.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.439216, 0.376471, 0.313726, 1 )
text = "长按拖动到右侧替换装备"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Equ_bg"]
margin_left = 26.0
margin_top = 74.0
margin_right = 304.0
margin_bottom = 448.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Equ_bg/ScrollContainer"]
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 4

[node name="Equ_info" type="NinePatchRect" parent="."]
visible = false
margin_left = 973.0
margin_top = 103.0
margin_right = 1315.0
margin_bottom = 582.0
rect_pivot_offset = Vector2( -99.2693, 132.973 )
mouse_filter = 0
texture = ExtResource( 7 )
patch_margin_top = 96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equ_name" type="Label" parent="Equ_info"]
margin_left = 26.0
margin_top = 10.0
margin_right = 304.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_outline_modulate = Color( 0.439216, 0.376471, 0.313726, 1 )
text = "豪华武器"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equ_lv" type="Label" parent="Equ_info"]
margin_left = 40.0
margin_top = 386.0
margin_right = 155.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.439216, 0.376471, 0.313726, 1 )
text = "等级：1"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equ_type" type="Label" parent="Equ_info"]
margin_left = 155.0
margin_top = 386.0
margin_right = 304.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.439216, 0.376471, 0.313726, 1 )
text = "类型：护手"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Equ_info"]
margin_left = 30.0
margin_top = 78.0
margin_right = 304.0
margin_bottom = 356.0
custom_constants/separation = 6

[node name="btn_down" type="Button" parent="Equ_info"]
margin_left = 212.0
margin_top = 412.0
margin_right = 315.0
margin_bottom = 453.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
text = "卸下"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="ClickTimer" to="." method="_on_ClickTimer_timeout"]
[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="gui_input" from="ScrollContainer" to="ScrollContainer" method="_on_ScrollContainer_gui_input"]
[connection signal="gui_input" from="status" to="." method="_on_status_gui_input"]
[connection signal="gui_input" from="skill" to="." method="_on_skill_gui_input"]
[connection signal="gui_input" from="equ" to="." method="_on_equ_gui_input"]
[connection signal="pressed" from="Equ_info/btn_down" to="." method="_on_btn_down_pressed"]
